Attempt 3 at fixing footer on mobile

--- a/dev/CSS/styles.css
+++ b/dev/CSS/styles.css
@@ -106,6 +106,9 @@
     background-color: #6d6e71;
     color: white;
 }
+input:focus ~ .footer{
+    position: absolute;
+}
 
 /*Common to All pages*/
 .hyperlink,
